--- a/VoltronBaseApp/app/src/main/res/layout/activity_main.xml
+++ b/VoltronBaseApp/app/src/main/res/layout/activity_main.xml
@@ -104,5 +104,20 @@
             android:text="START MULTIPLE"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp" />
+        <Button
+            android:id="@+id/btn_start_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="START SERVICE"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp" />
+        <Button
+            android:id="@+id/btn_start_bindservice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="START BIND SERVICE"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp" />
+
     </LinearLayout>
 </ScrollView>
