新增加业务共用接口模块，使得互不依赖的模块可以通过共用接口实现通信；

--- a/VoltronBaseApp/app/src/main/res/layout/activity_main.xml
+++ b/VoltronBaseApp/app/src/main/res/layout/activity_main.xml
@@ -108,14 +108,7 @@
             android:id="@+id/btn_start_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="START SERVICE"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp" />
-        <Button
-            android:id="@+id/btn_start_bindservice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="START BIND SERVICE"
+            android:text="TEST SERVICE"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp" />
 
